# ai-cybersecurity-copilot

./: .gitignore  README.md  ai_results_formatted.json  compose.yaml  extract_results.py  pom.xml
ai-service/: .env  pyproject.toml  requirements.txt  test_e2e_result.json
ai-service/app/: main.py
ai-service/app/api/: dependencies.py  routes.py
ai-service/app/broker/: consumer.py  publisher.py
ai-service/app/cache/: __init__.py  semantic_cache.py
ai-service/app/core/: __init__.py  config.py  exceptions.py  logger.py
ai-service/app/graph/: __init__.py  state.py  workflow.py
ai-service/app/graph/nodes/: __init__.py  analyst.py  coder.py  enricher.py  reviewer.py
ai-service/app/models/: __init__.py  callbacks.py  factory.py
ai-service/app/prompts/: __init__.py  analyst.py  coder.py  reviewer.py
ai-service/app/rag/: __init__.py  chunker.py  embeddings.py  ingest.py  vector_store.py
ai-service/app/rag/data/: __init__.py  cwe_top25.py  fix_patterns_java.py  fix_patterns_js.py  fix_patterns_python.py  initial_knowledge.py  owasp_cheatsheets.py
ai-service/app/schemas/: __init__.py  patch_schema.py  sarif_schema.py
ai-service/app/services/: processing.py
ai-service/app/tools/: __init__.py  codeql.py  github_advisory.py  nvd_client.py  semgrep.py  trivy.py  wrapper.py
ai-service/data/chromadb/: chroma.sqlite3
ai-service/tests/: test_e2e_pipeline.py  test_steps_1_2.py  test_steps_4_5.py
src/main/java/com/example/aicybersecuritycopilot/scan/entity/: Scan.java  (+1 more)
src/main/resources/: application.properties
src/test/resources/: sample-semgrep-sarif.json
(+50 files in other folders)
